--- a/view/createAccount.ejs
+++ b/view/createAccount.ejs
@@ -10,7 +10,7 @@
         <link rel="stylesheet" href="">
     </head>
     <body>
-        <form action="/createAccount" method="POST">
+        <form action="/createAccount" method="post">
             <label for="username">Username:</label>
             <input type="text" id="username" name="username" required>
 
