--- a/view/login.ejs
+++ b/view/login.ejs
@@ -11,7 +11,7 @@
     <body>
         <div class ="container">
             <h2>Login Form</h2>
-            <form action="/login" method="GET">
+            <form action="/login" method="get">
                 <div class="form-group">
                     <label for="username">Username</label>
                     <input type="text" id="username" name="username" class="login-input" placeholder="Enter your username" required>
