--- a/view/dashboard.ejs
+++ b/view/dashboard.ejs
@@ -16,8 +16,8 @@
         <p>Level: <span id="userlevel"></span></p>
         <p>Experience: <span id="userexp"></span></p>
 
-        <h2>Enter Training Time</h2>
-        <form action="/userLevel" id="Time">
+        <h2>Enter Training Time</h2>1
+        <form action="/userLevel" id="Time" method="post">
             <label for="trainingForm">Training Time</label>
             <input type="number" id="Time" name="trainingTime" required>
             <button type="submit">Submit</button>
