--- a/view/dashboard.ejs
+++ b/view/dashboard.ejs
@@ -16,7 +16,7 @@
         <p>Level: <span id="userlevel"></span></p>
         <p>Experience: <span id="userexp"></span></p>
 
-        <h2>Enter Training Time</h2>1
+        <h2>Enter Training Time</h2>
         <form action="/userLevel" id="Time" method="post">
             <label for="trainingForm">Training Time</label>
             <input type="number" id="Time" name="trainingTime" required>
