--- a/view/createAccount.ejs
+++ b/view/createAccount.ejs
@@ -15,7 +15,7 @@
             <input type="text" id="username" name="username" required>
 
             <label for="Password">Password:</label>
-            <input type="text" id ="password" name ="password" require>
+            <input type="text" id ="password" name ="userPassword" require>
 
             <button type = "submit">Create Account</button>
         </form>
