--- a/view/dashboard.ejs
+++ b/view/dashboard.ejs
@@ -10,12 +10,12 @@
         <link rel="stylesheet" href="">
     </head>
     <body>
-        <h1>Welcome, to your Dashboard!</h1>
+        <h1>Welcome, &lt;%= username %> to your Dashboard!</h1>
         <h2>User Information</h2>
-        <p>Name: <span id="username"></span></p>
-        <p>Level: <span id="userlevel"></span></p>
-        <p>Experience: <span id="userexp"></span></p>
-
+        <p>Name: <span id="username">&lt;%= username %></span></p>
+        <p>Level: <span id="userlevel">&lt;%= userlevel %></span></p>
+        <p>Experience: <span id="userexp">&lt;%= userexp %></span></p>
+        
         <h2>Enter Training Time</h2>
         <form action="/userLevel" id="Time" method="post">
             <label for="trainingForm">Training Time</label>
@@ -26,4 +26,4 @@
         
         <script src="" async defer></script>
     </body>
-</html
+</html>
