--- a/view/dashboard.ejs
+++ b/view/dashboard.ejs
@@ -1,29 +1,26 @@
 <!DOCTYPE html>
-
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Dashboard</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
-    </head>
-    <body>
-        <h1>Welcome, <%= user.name %> to your Dashboard!</h1>
-        <h2>User Information</h2>
-        <p>Name: <%= user.name %></p>
-        <p>Level: <%= user.lvl %></p>
-        <p>Experience: <%= user.exp %></p>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Dashboard</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="">
+  </head>
+  <body>
+    <h1>Welcome, to your Dashboard!</h1>
+    <h2>User Information</h2>
+    <p>Name: <%= user.name %></p>
+    <p>Level: <%= user.lvl %></p>
+    <p>Experience: <%= user.exp %></p>
 
-        <h2>Enter Training Time</h2>
-        <form action="/userLevel" id="Time" method="post">
-            <label for="trainingForm">Training Time</label>
-            <input type="number" id="Time" name="trainingTime" required>
-            <button type="submit">Submit</button>
-        </form>
-
-        
-        <script src="" async defer></script>
-    </body>
+    <h2>Enter Training Time</h2>
+    <form action="/userLevel" id="Time" method="post">
+      <label for="trainingForm">Training Time</label>
+      <input type="number" id="Time" name="trainingTime" required>
+      <button type="submit">Submit</button>
+    </form>
+    <script src="c:\Users\tommy\OneDrive\Bureau\#\Training App" async defer></script>
+  </body>
 </html>
