--- a/view/login.ejs
+++ b/view/login.ejs
@@ -26,5 +26,5 @@
                 </div>
             </form>
         </div>
-        <script src="" async defer></script>
+        <script src="app.js"></script>
     </body>
