--- a/view/dashboard.ejs
+++ b/view/dashboard.ejs
@@ -18,7 +18,7 @@
     <h2>Enter Training Time</h2>
     <form action="/userLevel" id="Time" method="POST">
       <label for="trainingForm">Training Time</label>
-      <input type="number" id="Time" name="trainingTime" required>
+      <input type="number" id="Time" name="Time" required>
       <button type="submit">Submit</button>
     </form>
     <h3>logout</h3>
