--- a/view/createAccount.ejs
+++ b/view/createAccount.ejs
@@ -11,6 +11,7 @@
     </head>
     <body>
         <form action="/createAccount" method="post">
+            <input type="hidden" name="_csrf" value="<%= csrfToken %>">
             <label for="username">Username:</label>
             <input type="text" id="username" name="username" required>
 
