--- a/view/login.ejs
+++ b/view/login.ejs
@@ -12,6 +12,7 @@
         <div class ="container">
             <h2>Login Form</h2>
             <form action="/login" method="post">
+                <input type="hidden" name="_csrf" value="<%= csrfToken %>">
                 <div class="form-group">
                     <label for="username">Username</label>
                     <input type="text" id="username" name="username" class="login-input" placeholder="Enter your username" required>
@@ -20,7 +21,6 @@
                     <label for="password">Password</label>
                     <input type="password" id="password" name="password" class="login-input" placeholder="Enter your password" required>
                 </div>
-            
                 <div class="form-group">
                     <button type="submit">Login</button>
                 </div>
