--- a/view/dashboard.ejs
+++ b/view/dashboard.ejs
@@ -23,8 +23,9 @@
       <button type="submit">Submit</button>
     </form>
     <h3>logout</h3>
-    <form action="/logout" id="logout" method="post">
-      <button type="logout">logout</button>
+    <form action="/logout" id="logout" method="get">
+      <input type="hidden" name="_csrf" value="<%= csrfToken %>">
+      <button type="submit">logout</button>
     </form>
     <script src="c:\Users\tommy\OneDrive\Bureau\#\Training App" async defer></script>
   </body>
